2008-01-09  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Fix typo

2008-01-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* configure.in: Remove gnome-desktop requirement, and
	allow compilation of the GTK+-only version of the
	browser plugin

============ Version 2.20.3

2008-01-07  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.20.3

2007-12-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (entry_parsed):
	* src/totem-playlist.c: (totem_embedded_parse_duration),
	(totem_playlist_entry_parsed): Add backported hack from
	trunk, patch by Hans de Goede <j.w.r.degoede@hhs.nl>,
	will skip 0-length playlists in both the main player and
	the browser viewer

2007-10-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: add audio/x-xm (XM tracker files)
	as supported (Closes: #489580)

2007-10-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_toggle_fullscreen):
	Put the fullscreen window on the screen where the video
	widget is, when using Xinerama (Closes: #487932)

2007-10-19  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Patch from Stephane Loeuillet
	<leroutier@gmail.com> to fix some warnings in the .desktop
	file (Closes: #481700)

============ Version 2.20.1

2007-10-17  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.20.1

2007-10-17  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Require GTK+ 2.12.1 so we get the patch
	for #478371

2007-10-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_open_stream):
	Fix replaying the stream when we were redirected
	(Closes: #486459)

2007-10-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_ui_manager_connect_proxy_callback):
	Fix pixbuf memleak, spotted by Christian Persch <chpe@gnome.org>

2007-10-06  Tim-Philipp Müller  <tim at centricular dot net>
