@@ -1,3 +1,9 @@
+2008-01-13  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-xine.c: (xine_event):
+	Check the title passed from xine-lib for UTF-8 correctness
+	(Closes: #497175)
+
 2008-01-09  Bastien Nocera  <hadess@hadess.net>
 
 	* configure.in: Fix typo
